--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -145,7 +145,7 @@ select[multiple].success {
 
 
 /* topdoc
-  name: Custom form inputs
+  name: jquery.custom-input
   family: cfgov-misc
   patterns:
     - name: Checkboxes
