--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6966,7 +6966,7 @@ a.category-slug.active {
 /* NOTE: all select[multiple] styles extend input[type="text"]. */
 
 /* topdoc
-  name: Custom form inputs
+  name: jquery.custom-input
   family: cfgov-misc
   patterns:
     - name: Checkboxes
