--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -145,6 +145,91 @@ select[multiple].success {
 
 
 /* topdoc
+    name: Custom select
+    family: cfgov-misc
+    patterns:
+    - name: Default custom select
+      markup: |
+        <label class="select"
+               for="select-default">
+            <select class="select_input"
+                    id="select-input">
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+                <option value="option4">Option 4</option>
+            </select>
+            <span class="select_icon cf-icon cf-icon-down"></span>
+        </label>
+    - name: Focused state
+      markup: |
+        <select class="focus">
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+    - name: Error state
+      notes:
+        - Please review the notes on form input error icons in the form icons section below.
+      markup: |
+        <select class="error">
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+        <span class="cf-form_input-icon cf-icon cf-icon-delete-round" role="alert">
+          <span class="jekyll-bug"></span>
+        </span>
+    - name: Success state
+      notes:
+        - Please review the notes on form input success icons in the form icons section below.
+      markup: |
+        <select class="success">
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+        <span class="cf-form_input-icon cf-icon cf-icon-approved-round">
+          <span class="jekyll-bug"></span>
+        </span>
+    tags:
+    - cfgov-misc
+*/
+
+.select {
+    overflow: hidden;
+    position: relative;
+    border: solid 1px @gray;
+    background: @white;
+
+    &_icon {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: unit( 4px / @base-font-size-px, em );
+        line-height: 1.375;
+    }
+
+    &_input {
+        // Push the native select arrow out of view
+        width: 115%;
+        padding: unit( 4px / @base-font-size-px, em );
+        // Customize the colors
+        border: 0;
+        border-radius: 0;
+        background-color: transparent;
+        background-image: none;
+        -webkit-appearance: none;
+        box-shadow: none;
+        color: @black;
+    }
+}
+
+
+/* topdoc
   name: jquery.custom-input
   family: cfgov-misc
   patterns:
