--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6162,6 +6162,68 @@ a.category-slug.active {
   color: #101820;
 }
 /* topdoc
+    name: Custom select
+    family: cfgov-misc
+    patterns:
+    - name: Default custom select
+      markup: |
+        <div class="custom-select">
+            <select>
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+                <option value="option4">Option 4</option>
+            </select>
+            <span class="custom-select_icon cf-icon cf-icon-down"></span>
+        </div>
+        <script src="/vendor/jquery/jquery.js"></script>
+        <script src="/static/js/jquery.custom-select.js"></script>
+    tags:
+    - cfgov-misc
+*/
+.custom-select {
+  overflow: hidden;
+  position: relative;
+  border: solid 1px #75787b;
+  background: #ffffff;
+}
+.custom-select.is-hovered,
+.custom-select.is-focused {
+  border-color: #0072ce;
+  outline: 1px solid #0072ce;
+}
+.custom-select_icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.25em;
+  line-height: 1.375;
+}
+.custom-select_text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.25em;
+  font-family: Arial, sans-serif;
+  line-height: 1.375;
+}
+.custom-select_select {
+  width: 100%;
+  padding: 0.25em;
+  border: 0;
+  border-radius: 0;
+  background-color: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  color: #101820;
+}
+.is-hovered .custom-select_select,
+.is-focused .custom-select_select {
+  outline: none;
+}
+/* topdoc
   name: jquery.custom-input
   family: cfgov-misc
   patterns:
