--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7038,7 +7038,7 @@ a.category-slug.active {
 .custom-select {
   overflow: hidden;
   position: relative;
-  border: solid 1px #75787b;
+  border: solid 1px #babbbd;
   background: #ffffff;
 }
 
@@ -7053,6 +7053,7 @@ a.category-slug.active {
   top: 0;
   right: 0;
   padding: 0.25em;
+  color: #babbbd;
   line-height: 1.375;
 }
 
@@ -7063,6 +7064,7 @@ a.category-slug.active {
   padding: 0.25em;
   font-family: Arial, sans-serif;
   line-height: 1.375;
+  color: #babbbd;
 }
 
 .custom-select_select {
