Updates form group pattern.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -532,6 +532,7 @@ select[multiple].success {
 
     &_item,
     &_item[type="text"] {
+        display: inline-block;
         box-sizing: border-box;
         width: 50%;
         z-index: 1;
