--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6490,6 +6490,7 @@ a.category-slug.active {
 */
 .input-group_item,
 .input-group_item[type="text"] {
+  display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
