--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7372,6 +7372,7 @@ a.category-slug.active {
 
 .input-group_item,
 .input-group_item[type="text"] {
+  display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
