--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -241,7 +241,8 @@ select[multiple].success {
         position: absolute;
         top: 0;
         left: 0;
-        padding: unit( 4px / @base-font-size-px, em );
+        padding: unit( 4px / @base-font-size-px, em )
+                 unit( 10px / @base-font-size-px, em );
         font-family: Arial, sans-serif;
         line-height: 1.375;
         color: @gray-50;
