--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6205,13 +6205,16 @@ a.category-slug.active {
   top: 0;
   left: 0;
   padding: 0.25em 0.625em;
+  z-index: 1;
   font-family: Arial, sans-serif;
   line-height: 1.375;
   color: #babbbd;
 }
 .custom-select_select {
+  position: relative;
   width: 100%;
   padding: 0.25em;
+  z-index: 2;
   border: 0;
   border-radius: 0;
   background-color: transparent;
