--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7035,7 +7035,7 @@ a.category-slug.active {
     - cfgov-misc
 */
 
-.custom-select {
+.is-enabled.custom-select {
   overflow: hidden;
   position: relative;
   border: solid 1px #babbbd;
@@ -7049,14 +7049,20 @@ a.category-slug.active {
 }
 
 .custom-select_icon {
+  display: none;
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 2;
   padding: 0.25em 0.375em;
-  z-index: 1;
+  border-left: 4px solid #ffffff;
   background: #f1f2f2;
   color: #babbbd;
   line-height: 1.375;
+}
+
+.is-enabled .custom-select_icon {
+  display: inline-block;
 }
 
 .custom-select_text {
@@ -7074,7 +7080,7 @@ a.category-slug.active {
   position: relative;
   width: 100%;
   padding: 0.25em;
-  z-index: 2;
+  z-index: 3;
   border: 0;
   border-radius: 0;
   background-color: transparent;
