--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -145,10 +145,10 @@ select[multiple].success {
 
 
 /* topdoc
-    name: Custom select
+    name: jquery.custom-select
     family: cfgov-misc
     patterns:
-    - name: Default custom select
+    - name: Custom select
       markup: |
         <div class="custom-select">
             <select>
@@ -159,6 +159,16 @@ select[multiple].success {
             </select>
             <span class="custom-select_icon cf-icon cf-icon-down"></span>
         </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          label.custom-select
+            select
+              option
+            .custom-select-icon
+    - name: JavaScript setup
+      markup: |
         <script src="/vendor/jquery/jquery.js"></script>
         <script src="/static/js/jquery.custom-select.js"></script>
     tags:
@@ -244,7 +254,7 @@ select[multiple].success {
   name: jquery.custom-input
   family: cfgov-misc
   patterns:
-    - name: Checkboxes
+    - name: Custom checkbox
       markup: |
         <label class="form-label"
                for="custom-input_checkbox-lorem">
@@ -282,7 +292,7 @@ select[multiple].success {
       notes:
         - "Remember to use for and id attributes. This will allow IE less than 8
           to trigger the input on label click."
-    - name: Radio buttons
+    - name: Custom radio button
       markup: |
         <label class="form-label"
                for="custom-input_radio-lorem">
