--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6984,10 +6984,16 @@ a.category-slug.active {
         - |
           Structural cheat sheet:
           -----------------------
-          label.custom-select
+          .custom-select
             select
               option
             .custom-select-icon
+      notes:
+        - "Use the markup structure above to add .custom-select elements.
+          It is meant to allow for cases where JavaScript is unavailable.
+          The jQuery plugin transforms this initial HTML by adding more markup
+          and classes. If JavaScript is unavailable the new elements and classes
+          won't be added, leaving the select still usable."
     - name: JavaScript setup
       markup: |
         <script src="/vendor/jquery/jquery.js"></script>
@@ -7099,6 +7105,11 @@ a.category-slug.active {
           label.custom-form
             input[type=checkbox]
       notes:
+        - "Use the markup structure above to add .custom-input elements.
+          It is meant to allow for cases where JavaScript is unavailable.
+          The jQuery plugin transforms this initial HTML by adding more markup
+          and classes. If JavaScript is unavailable the new elements and classes
+          won't be added, leaving the select still usable."
         - "Remember to use for and id attributes. This will allow IE less than 8
           to trigger the input on label click."
     - name: Custom radio button
@@ -7137,6 +7148,11 @@ a.category-slug.active {
           label.custom-form
             input[type=radio]
       notes:
+        - "Use the markup structure above to add .custom-input elements.
+          It is meant to allow for cases where JavaScript is unavailable.
+          The jQuery plugin transforms this initial HTML by adding more markup
+          and classes. If JavaScript is unavailable the new elements and classes
+          won't be added, leaving the select still usable."
         - "Remember to use for and id attributes. This will allow IE less than 8
           to trigger the input on label click."
     - name: JavaScript setup
