--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -163,10 +163,16 @@ select[multiple].success {
         - |
           Structural cheat sheet:
           -----------------------
-          label.custom-select
+          .custom-select
             select
               option
             .custom-select-icon
+      notes:
+        - "Use the markup structure above to add .custom-select elements.
+          It is meant to allow for cases where JavaScript is unavailable.
+          The jQuery plugin transforms this initial HTML by adding more markup
+          and classes. If JavaScript is unavailable the new elements and classes
+          won't be added, leaving the select still usable."
     - name: JavaScript setup
       markup: |
         <script src="/vendor/jquery/jquery.js"></script>
@@ -290,6 +296,11 @@ select[multiple].success {
           label.custom-form
             input[type=checkbox]
       notes:
+        - "Use the markup structure above to add .custom-input elements.
+          It is meant to allow for cases where JavaScript is unavailable.
+          The jQuery plugin transforms this initial HTML by adding more markup
+          and classes. If JavaScript is unavailable the new elements and classes
+          won't be added, leaving the select still usable."
         - "Remember to use for and id attributes. This will allow IE less than 8
           to trigger the input on label click."
     - name: Custom radio button
@@ -328,6 +339,11 @@ select[multiple].success {
           label.custom-form
             input[type=radio]
       notes:
+        - "Use the markup structure above to add .custom-input elements.
+          It is meant to allow for cases where JavaScript is unavailable.
+          The jQuery plugin transforms this initial HTML by adding more markup
+          and classes. If JavaScript is unavailable the new elements and classes
+          won't be added, leaving the select still usable."
         - "Remember to use for and id attributes. This will allow IE less than 8
           to trigger the input on label click."
     - name: JavaScript setup
