Adds comment for .custom-select.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -203,6 +203,8 @@ select[multiple].success {
     }
 
     &_icon {
+        // This element does not get added dynamically so it should be hidden
+        // until JavaScript is enabled.
         display: none;
         position: absolute;
         top: 0;
