Adds min-width to .custom-select_icon.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7023,11 +7023,13 @@ a.category-slug.active {
   top: 0;
   right: 0;
   z-index: 2;
+  min-width: 1em;
   padding: 0.25em 0.375em;
   border-left: 4px solid #ffffff;
   background: #f1f2f2;
   color: #babbbd;
   line-height: 1.375;
+  text-align: center;
 }
 
 .is-enabled .custom-select_icon {
