--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -210,6 +210,7 @@ select[multiple].success {
         top: 0;
         right: 0;
         z-index: 2;
+        min-width: 1em;
         padding: unit( 4px / @base-font-size-px, em )
                  unit( 6px / @base-font-size-px, em );
         // This will overlay .custom-select_text and make it appear as if any
@@ -218,6 +219,7 @@ select[multiple].success {
         background: @gray-10;
         color: @gray-50;
         line-height: 1.375;
+        text-align: center;
         .is-enabled & {
             display: inline-block;
         }
