--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -175,8 +175,8 @@ select[multiple].success {
           won't be added, leaving the select still usable."
     - name: JavaScript setup
       markup: |
-        <script src="/vendor/jquery/jquery.js"></script>
-        <script src="/static/js/jquery.custom-select.js"></script>
+        <script src="../../vendor/jquery/jquery.js"></script>
+        <script src="../../static/js/jquery.custom-select.js"></script>
     tags:
     - cfgov-misc
 */
@@ -352,8 +352,8 @@ select[multiple].success {
           to trigger the input on label click."
     - name: JavaScript setup
       markup: |
-        <script src="/vendor/jquery/jquery.js"></script>
-        <script src="/static/js/jquery.custom-input.js"></script>
+        <script src="../../vendor/jquery/jquery.js"></script>
+        <script src="../../static/js/jquery.custom-input.js"></script>
   tags:
     - cfgov-misc
 */
