--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6996,8 +6996,8 @@ a.category-slug.active {
           won't be added, leaving the select still usable."
     - name: JavaScript setup
       markup: |
-        <script src="/vendor/jquery/jquery.js"></script>
-        <script src="/static/js/jquery.custom-select.js"></script>
+        <script src="../../vendor/jquery/jquery.js"></script>
+        <script src="../../static/js/jquery.custom-select.js"></script>
     tags:
     - cfgov-misc
 */
@@ -7159,8 +7159,8 @@ a.category-slug.active {
           to trigger the input on label click."
     - name: JavaScript setup
       markup: |
-        <script src="/vendor/jquery/jquery.js"></script>
-        <script src="/static/js/jquery.custom-input.js"></script>
+        <script src="../../vendor/jquery/jquery.js"></script>
+        <script src="../../static/js/jquery.custom-input.js"></script>
   tags:
     - cfgov-misc
 */
