--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,8 @@
 <!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 
+{% from "macros.html" import share_twitter_url with context %}
+
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# {% block og_article_prefix %}{% endblock %}">
 
 <!--
@@ -110,26 +112,6 @@
     Begin page source
     =================
 -->
-
-    {# Build a Twitter share URL #}
-    {% set share_twitter_url = "http://twitter.com/intent/tweet" %}
-    {% set share_twitter_url = share_twitter_url + "?url=" + request.url|urlencode %}
-    {% set share_twitter_url = share_twitter_url + "&amp;via=CFPB" %}
-    {% if post %}
-        {# If this is a post object, check for custom fields having been set #}
-        {% if post.custom_fields.twtr_text %}
-            {% set share_twitter_url = share_twitter_url + "&amp;text=" + post.custom_fields.twtr_text.0|urlencode + "%20--" %}
-        {% endif %}
-        {% if post.custom_fields.twtr_rel %}
-            {% set share_twitter_url = share_twitter_url + "&amp;related=" + post.custom_fields.twtr_rel.0 %}
-        {% endif %}
-        {% if post.custom_fields.twtr_lang %}
-            {% set share_twitter_url = share_twitter_url + "&amp;lang=" + post.custom_fields.twtr_lang.0 %}
-        {% endif %}
-        {% if post.custom_fields.twtr_hash %}
-            {% set share_twitter_url = share_twitter_url + "&amp;hashtags=" + post.custom_fields.twtr_hash.0 %}
-        {% endif %}
-    {% endif %}
 
     <div class="demo-banner">
         cfgov-refresh demo: <b>{% block demo_title %}MISSING DEMO TITLE{% endblock demo_title %}</b>
